Fixed navbar to work better on mobile

--- a/stylesres.css
+++ b/stylesres.css
@@ -22,7 +22,7 @@
     top: 0;
     left: 0;
     right: 0;
-    position: fixed;
+    position: sticky;
     background-color: var(--lighter);
     overflow: hidden;
     transition: var(--transition);
@@ -59,7 +59,7 @@
 }
 
 .resume {
-    padding-top: 90px;
+    padding-top:0px;
     padding-left: 0px;
     padding-bottom: 10px;
 }
